@@ -2,7 +2,7 @@ package co.inajar.oursponsors.controllers.fec;
 
 import co.inajar.oursponsors.models.fec.SponsorRequest;
 import co.inajar.oursponsors.models.fec.SponsorResponse;
-import co.inajar.oursponsors.services.fec.CommitteesManager;
+import co.inajar.oursponsors.services.fec.SponsorManager;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -14,25 +14,24 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping(path = "/fec")
 public class FECController {
 
     @Autowired
-    private CommitteesManager committeesManager;
+    private SponsorManager sponsorManager;
 
     @PreAuthorize("isAuthenticated()")
     @PostMapping(path = "get_sponsors")
     public ResponseEntity<List<SponsorResponse>> getSponsors(@RequestBody SponsorRequest data) {
         var response = new ArrayList<SponsorResponse>();
         var httpStatus = HttpStatus.OK;
-        var possibleSponsors = committeesManager.getSponsors(data);
+        var possibleSponsors = sponsorManager.getSponsors(data);
         if (!possibleSponsors.isEmpty()) {
             var list = possibleSponsors.parallelStream()
                     .map(SponsorResponse::new)
-                    .collect(Collectors.toList());
+                    .toList();
             response.addAll(list);
         }
         return new ResponseEntity<>(response, httpStatus);
